[package]
name = "colmena-health"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0", features = ["derive"] }
futures = "0.3.21"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version =  "1.19.2", features = ["full"] }
trust-dns-resolver = "0.21.2"
reqwest = "0.11.11"

