[package]
name = "colmena-health"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-process = "1.4.0"
async-trait = "0.1.57"
clap = { version = "4.0.0", features = ["derive"] }
futures = "0.3.21"
merge = "0.1.0"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
simple-eyre = "0.3"
tokio = { version =  "1.19.2", features = ["full", "rt-multi-thread"] }
trust-dns-resolver = "0.21.2"
reqwest = "0.11.11"
